fixed overflow issue with Apropos text

--- a/style.css
+++ b/style.css
@@ -509,12 +509,13 @@ h3 {
   background-color: var(--main-color);
   color: black;
   width: fit-content;
-  max-height: 500px;
+  max-height: fit-content;
   border-radius: 8px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   font-size: 16px;
   padding: 1rem;
+  overflow: scroll;
 }
 
 .card-img {
